--- a/index.html
+++ b/index.html
@@ -301,7 +301,7 @@
           <article class="game-card" style="border-style: dashed; border-color: rgba(255,255,255,0.1);">
             <div class="game-info">
               <div style="text-transform: uppercase; font-size: 12px; color: var(--text-muted); font-weight: 700; margin-bottom: 8px; letter-spacing: 2px;">In Development</div>
-              <h3>The Shameful Fears: Let’s Just Forget It</h3>
+              <h3>The Shameful Fears: Just Forget It</h3>
               <p>A psychological horror experience about living with something you can’t undo — and the quiet fear that follows.</p>
               <div>
                 <button class="btn btn-outline" style="width: 100%; justify-content: center; opacity: 0.5; cursor: not-allowed;" disabled>Coming Soon</button>
@@ -368,3 +368,4 @@
 
 </body>
 </html>
+
