Fix HTML encoding issues in index.html

--- a/index.html
+++ b/index.html
@@ -290,7 +290,7 @@
             <div class="game-info">
               <div style="text-transform: uppercase; font-size: 12px; color: var(--primary); font-weight: 700; margin-bottom: 8px; letter-spacing: 2px;">Released</div>
               <h3>The Sujuk Seller</h3>
-              <p>An atmosphere-driven psychological horror experience about routine, discomfort, and the quiet feeling that something isn’t right.</p>
+              <p>A psychological horror experience set inside a ‘sujuk’ shop, where nothing remains normal.</p>
               <div style="display: flex; gap: 12px;">
                 <a href="https://melaisstudio.itch.io/thesujukseller" target="_blank" class="btn-primary btn" style="padding: 12px 24px; font-size: 14px; flex: 1; justify-content: center;">Play on Itch.io</a>
                 <button onclick="openVideoModal('https://www.youtube.com/embed/JmTO0zVa0lE?autoplay=1')" class="btn-trailer btn" style="padding: 12px 24px; font-size: 14px; flex: 1; justify-content: center;"><i class="fab fa-youtube"></i> Watch Trailer</button>
@@ -298,16 +298,19 @@
             </div>
           </article>
 
-          <article class="game-card" style="border-style: dashed; border-color: rgba(255,255,255,0.1);">
-            <div class="game-info">
-              <div style="text-transform: uppercase; font-size: 12px; color: var(--text-muted); font-weight: 700; margin-bottom: 8px; letter-spacing: 2px;">In Development</div>
-              <h3>The Shameful Fears: Just Forget It</h3>
-              <p>A psychological horror experience about living with something you can’t undo — and the quiet fear that follows.</p>
-              <div>
-                <button class="btn btn-outline" style="width: 100%; justify-content: center; opacity: 0.5; cursor: not-allowed;" disabled>Coming Soon</button>
-              </div>
-            </div>
-          </article>
+         <article class="game-card">
+  <div class="game-info">
+    <div style="text-transform: uppercase; font-size: 12px; color: var(--primary); font-weight: 700; margin-bottom: 8px; letter-spacing: 2px;">Released</div>
+    <h3>Final Clearance</h3>
+    <p>Approve or execute. Manage resources, keep your wife alive. Fail, and you won't see the sunrise.</p>
+    <div style="display: flex; gap: 12px;">
+      <a href="https://melaisstudio.itch.io/finalclearance" target="_blank" class="btn-primary btn" style="padding: 12px 24px; font-size: 14px; flex: 1; justify-content: center;">
+        Play on Itch.io
+      </a>
+    </div>
+  </div>
+</article>
+
 
         </div>
       </section>
@@ -368,4 +371,5 @@
 
 </body>
 </html>
+
 
